--- a/ZaimaCSS/WhatIsZaima.html
+++ b/ZaimaCSS/WhatIsZaima.html
@@ -15,14 +15,14 @@ f.previousauthors = '' // as above
 f.modifiers = '' // people making substantive changes, and their affiliation
 f.searchString = 'qa-ruby' // blog search string - usually the filename without extensions
 f.firstPubDate = '2017-10-07' // date of the first publication of the document (after review)
-f.lastSubstUpdate = { date:'2017-10-15', time:'15:23'}  // date and time of latest substantive changes to this document
+f.lastSubstUpdate = { date:'2017-10-16', time:'08:30'}  // date and time of latest substantive changes to this document
 f.status = 'published'  // should be one of draft, review, published, notreviewed or obsolete
 f.path = '../' // what you need to prepend to a URL to get to the /International directory 
 
 // AUTHORS AND TRANSLATORS should fill in these assignments:
 f.thisVersion = { date:'2017-10-07', time:'15:23'} // date and time of latest edits to this document/translation
 f.contributors = '' // people providing useful contributions or feedback during review or at other times
-f.sources = 'Some of the descriptive information presented here is paraphrased from <cite><a href="https://dash.harvard.edu/bitstream/handle/1/3292407/shelemay_chant.pdf">Oral and Written Transmission in Ethiopian Christian Chant</a>' // describes sources of information
+f.sources = 'Some of the descriptive information presented here is paraphrased from <cite><a href="https://dash.harvard.edu/bitstream/handle/1/3292407/shelemay_chant.pdf">Oral and Written Transmission in Ethiopian Christian Chant</a>.' // describes sources of information
 // also make sure that the lang attribute on the html tag is correct!
 
 // TRANSLATORS should fill in these assignments:
@@ -100,7 +100,7 @@ f.additionalLinks = ''
    during Holy Week)and funerals.  By convention, Ezil notation will be rendered in red.
    Araray (ዓራራይ) is the upbeat, higher range mode characterized by strong, light and even jubilant.
    The mode is sometimes indicated within the hymn text or in a margin note (left side) but generally not as the pracitioner is expected to
-   know the appropriate mode by virtue of his training or by inspection of the <a href="#miliket">miliket</a>.
+   know the appropriate mode by virtue of his training or by inspection of the <a href="#miliket">Miliket</a>.
   </p>
   </section>
   <section>
@@ -145,7 +145,7 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   <h3 id="haleita"><a href="#haleita">Halleluya Numbers (ሃሌታ)</a></h3>
   <p><em>Haleita</em> or &ldquo;halleluya numbers&rdquo; are rendered in the hymn line and are another system of reference to an entry in a
    &lduo;haleita table&rdquo; which indicates how the halleluya melody should be sung. The system is similar to miliket referencing and
-   is grounded in a <a href="#beit">beit</a> context.
+   is grounded in a <a href="#beit">Beit</a> context.
   </p>
   </section>
 
