updates after spell checker.

--- a/ZaimaCSS/WhatIsZaima.html
+++ b/ZaimaCSS/WhatIsZaima.html
@@ -82,7 +82,7 @@ f.additionalLinks = ''
   <p>Zaima notation comprises separate systems of Qirts (ቅርጽ) and Miliket (ምልክት) which are used together and written at half scale above the hymn text.
   The systems are used together to denote the vocal inflection of base text hymn that they appear over.</p>
   <p>Zaima often features more than one interlinear line of notation  that are fully independent and never vocalized together. The
-  notation lines may present a different &ldquo;mode&rdquo; (ስልት) of chant appropriate for a given occassion such as a celebration or memorial. A line may
+  notation lines may present a different &ldquo;mode&rdquo; (ስልት) of chant appropriate for a given occasion such as a celebration or memorial. A line may
   also present a different melody for the verse when it is repeated.</p>
 </section>
 
@@ -93,13 +93,13 @@ f.additionalLinks = ''
   and styling requirements in electronic documents.</p>
   <section>
   <h3 id="selt"><a href="#selt">Mode (ስልት)</a></h3>
-  <p>Every line of Zaima notation embodies one of three modes (ስልት or more literally &ldquo;order&rdquo;) of melodic vocalization. The first of the three modes is Ge&rsquo;ez (ግዕዝ) which in fact
-   means &ldquo;first&rdquo; in many contexts. It is the most frquent mode characterized by a strong, light and plain melody for everyday use (a 
-   &ldquo;base&rdquo; mode).
+  <p>Every line of Zaima notation embodies one of three modes (ስልት or more literally &ldquo;order&rdquo;) of melodic vocalization. The first of the
+   three modes is Ge&rsquo;ez (ግዕዝ), which in fact means &ldquo;first&rdquo; in many contexts. It is the most frequent mode characterized by a strong,
+   light and plain melody for everyday use (a &ldquo;base&rdquo; mode).
    Ezil (ዕዝል) is somber and heavy sounding, its in a lower range than Ge&rsquo;ez mode and is used during fasting (such as during Lent), vigils (for example
    during Holy Week)and funerals.  By convention, Ezil notation will be rendered in red.
    Araray (ዓራራይ) is the upbeat, higher range mode characterized by strong, light and even jubilant.
-   The mode is sometimes indicated within the hymn text or in a margin note (left side) but generally not as the pracitioner is expected to
+   The mode is sometimes indicated within the hymn text or in a margin note (left side) but generally not as the practitioner is expected to
    know the appropriate mode by virtue of his training or by inspection of the <a href="#miliket">Miliket</a>.
   </p>
   </section>
@@ -144,7 +144,7 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   <section>
   <h3 id="haleita"><a href="#haleita">Halleluya Numbers (ሃሌታ)</a></h3>
   <p><em>Haleita</em> or &ldquo;halleluya numbers&rdquo; are rendered in the hymn line and are another system of reference to an entry in a
-   &lduo;haleita table&rdquo; which indicates how the halleluya melody should be sung. The system is similar to miliket referencing and
+   &ldquo;haleita table&rdquo; which indicates how the halleluya melody should be sung. The system is similar to miliket referencing and
    is grounded in a <a href="#beit">Beit</a> context.
   </p>
   </section>
