--- a/ZaimaCSS/WhatIsZaima.html
+++ b/ZaimaCSS/WhatIsZaima.html
@@ -115,7 +115,7 @@ f.additionalLinks = ''
   </section>
   <section>
   <h3 id="miliket"><a href="#miliket">Miliket (ምልክት)</a></h3>
-  <p><em>Miliket</em> are rendered on the interlinear notation lines and make up the bulk of zaima notation. Miliket number in the many hundrends and are
+  <p><em>Miliket</em> are rendered on the interlinear notation lines and make up the bulk of zaima notation. Miliket number in the many hundreds and are
   abbreviations of a single word or of a few words. Like qirts the miliket define vocalization for the letters or word that they are positioned
   over. Miliket are specified by a context where the miliket itself was a word or phrase sung in the base text hymn and may have had qirts or
   other miliket applied to it. The context that grounds a miliket is known as its <a href="#sereyu">Sereyu</a>. Unlike qirts which will be
