link fix PlayPen => Playpen

--- a/ZaimaCSS/index.html
+++ b/ZaimaCSS/index.html
@@ -60,7 +60,7 @@ f.additionalLinks = ''
     <p class="desc">Incremental application of Ruby markup and CSS to evaluate a browser's ability to display interlinear notation.</p>
   </li>
   <li class="w3">
-    <p class="link"><a href="ZaimaPlayPen.html">Zaima Playpen</a></p>
+    <p class="link"><a href="ZaimaPlaypen.html">Zaima Playpen</a></p>
     <p class="desc">Javascript and CSS experiments that manipulate Zaima display.</p>
   </li>
 </ul>
