--- a/ZaimaCSS/ZaimaPlaypen.html
+++ b/ZaimaCSS/ZaimaPlaypen.html
@@ -375,9 +375,21 @@ and ultimately to determine if Zaima presentation requirements necessitate their
         </tr>
         <tr>
           <td><img src="https://w3c.github.io/i18n-drafts/icons/safari_16x16.png" width="16" height="16" alt="Safari" title="Safari" style="vertical-align: middle;"/> Safari</td>
-          <td>Version 11.0 (11604.1.38.1.7)</td>
+          <td>11.0 (11604.1.38.1.7)</td>
           <td>Webkit</td>
           <td>iOS-based browsers, Yandex, UC Browser, etc.</td>
+        </tr>
+        <tr>
+          <td><img src="https://w3c.github.io/i18n-drafts/icons/firefox_16x16.png" width="16" height="16" alt="Firefox" title="Firefox" style="vertical-align: middle;"/> Firefox</td>
+          <td>56.0.0 <em>Fails</em></td>
+          <td>Gecko</td>
+          <td>Conkeror, etc.</td>
+        </tr>
+        <tr>
+          <td><img src="https://w3c.github.io/i18n-drafts/icons/edge_16x16.png" width="16" height="16" alt="Edge" title="Edge" style="vertical-align: middle;"/> Edge</td>
+          <td><em>Untested</em></td>
+          <td>EdgeHTML</td>
+          <td></td>
         </tr>
       </tbody>
     </table>
