--- a/ZaimaCSS/SupportingZaimaInBrowsers.html
+++ b/ZaimaCSS/SupportingZaimaInBrowsers.html
@@ -64,7 +64,7 @@ lower level's annotation.  Handling these scenarios leads us into the <a href="h
 problem which presently does not have a solution supported by W3C standards.</p>
 
 <p>The approach taken here handles multiple rows of annotation by duplicating the base text and formatting each copy with a single row
-of Ruby annotation independently.  These independently annotated copies of the base text are then overlayed on top of one
+of Ruby annotation independently.  These independently annotated copies of the base text are then overlaid on top of one
 another so that the base text is superimposed precisely and only a single copy of the base text remains visible. The position of the
 Ruby annotation text is then raised to successively higher levels on each copy, creating the effect of multiple rows of overlapping
 annotation.</p>
@@ -193,6 +193,7 @@ bolder:</p>
 <section>
 <h2>Adding Annotation Rows</h2>
 
+<h4>Chrome 60 Solution:</h4>
 <p><br/> <br/></p>
 
 <div class="sample">
@@ -235,7 +236,9 @@ virtue of the base text being hidden from view but may have other consequences o
 to help understand any layout side effects (numeric indexes are added to the base text for clarity):</p>
 
 
+<h4>Chrome 60 Solution:</h4>
 <p><br/> <br/></p>
+
 
 <div class="sample">
 <ruby class="chrome60row4"><rb style="visibility: visible;">4ሀለሐመሠረሰሸቀቐበቨተቸኀነኘአከኸወዐዘዠየደጀገጠጨጰጸፀፈፐ</rb><rt><span>4ሀለሐመሠረሰሸቀቐበቨተቸኀነኘአከኸወዐዘዠየደጀገጠጨጰጸፀፈፐ</span></rt></ruby>
