added "notation" for clarity.

--- a/ZaimaCSS/ZaimaPlaypen.html
+++ b/ZaimaCSS/ZaimaPlaypen.html
@@ -349,8 +349,8 @@ function reset() {
 <h1>Zaima Playpen for CSS Development &amp; Browser Testing</h1>
 <p>This page is both exploratory and demonstrative of CSS capabilities in positioning and styling of the
 interlinear notation of Zaima under <a href="https://www.w3.org/International/articles/ruby/markup">Ruby Markup</a>.
-Ruby markup and style properties are applied to Zaima samples to evaluate their suitability in presenting Zaima under
-user expectations in digital documents.  A goal of the page is to identify and note any short comings in the ability
+Ruby markup and style properties are applied to Zaima samples to evaluate their suitability in presenting Zaima notation
+under user expectations in digital documents.  A goal of the page is to identify and note any short comings in the ability
 of markup and style languages to support Zaima requirements, uncover browser limitations in rendering, 
 and ultimately to determine if Zaima presentation requirements necessitate their own markup model and standards additions.</p>
 </section>
