Commented out automated note which is presently premature.

--- a/ZaimaCSS/WhatIsZaima.html
+++ b/ZaimaCSS/WhatIsZaima.html
@@ -57,7 +57,7 @@ f.additionalLinks = ''
   <div id="audience">
     <p><span id="intendedAudience" class="leadin">Intended audience:</span> 
     anyone who has heard of Zaima notations and would like to know a little more about it. </p>
-    <div id="updateInfo"></div><script>document.getElementById('updateInfo').innerHTML = g.updated</script>
+    <!-- div id="updateInfo"></div><script>document.getElementById('updateInfo').innerHTML = g.updated</script -->
   </div>
     
   <h2 id="question"><a href="#question">Question</a></h2>
