Start on Zaima Model.

--- a/ZaimaCSS/SupportingZaimaInBrowsers.html
+++ b/ZaimaCSS/SupportingZaimaInBrowsers.html
@@ -70,8 +70,8 @@ Ruby annotation text is then raised to successively higher levels on each copy, 
 annotation.</p>
 
 <p>A solution for multiple rows of independently bound and formatted annotation is needed to support the 
-<a href="ZaimaUseCases.html">Ethiopic Zaima practice</a>, which is fully described in the developing model
-document [TBD].</p>
+<a href="ZaimaUseCases.html">Zaima interlinear notation</a>, which is fully described in the developing 
+<a href="ZaimaModel.html">model document</a>.</p>
 
 </section>
 
