--- a/ZaimaCSS/ZaimaUseCases-Chrome60.html
+++ b/ZaimaCSS/ZaimaUseCases-Chrome60.html
@@ -3,7 +3,7 @@
 <head>
   <title>Zaima Styling Use Cases</title>
   <meta charset="utf-8" />
-  <meta name="description" content="How to use CSS styling to support ruby text for Asian languages." />
+  <meta name="description" content="Use cases for zaima chant interlinear notation." />
 <script type="text/javascript">
 var f = { }
 
