--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -3,7 +3,7 @@
 <head>
   <title>Zaima Styling Use Cases</title>
   <meta charset="utf-8" />
-  <meta name="description" content="How to use CSS styling to support ruby text for Asian languages." />
+  <meta name="description" content="Use cases for zaima chant interlinear notation." />
 <script type="text/javascript">
 var f = { }
 
@@ -97,9 +97,10 @@ Specialists in the Yaredic Zaima practice who can review the use cases and sugge
 <div id="status">
 <p class="note justify-full"><span id="status" class="leadin">Viewing Note:</span> 
 The correct arrangement and styling of Zaima in this document is highly sensistive to browser version and typeface choices.
-This content has been optimized for viewing in the Chrome 60 web browser
+This content has been optimized for wide screen viewing in the Chrome 61 web browser
 with the <a href="https://software.sil.org/abyssinica/">Abyssinica SIL</a> font used for Ethiopic script samples.
-The content displays acceptably in Safari 11.  Layout is entirely broken under Chrome 61, and mostly broken under Firefox 55.
+The content displays acceptably in Safari 11.  Layout is broken under Chrome 60 and Firefox 56 (a previous version of this
+document optimized for Chrome 60 is available <a href="ZaimaUseCases-Chrome60.html">here</a>).
 A <a href="ZaimaStylingUseCases-20171006.pdf">PDF version</a> of this page is offered as a reference for what correct layout presentation
 should appear like.</p>
 </div>
