--- a/ZaimaCSS/index.html
+++ b/ZaimaCSS/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Layout and Styling of Zaima Chant with Web Standards</title>
   <meta charset="utf-8" />
-  <meta name="description" content="How to use CSS styling to support ruby text for Asian languages." />
+  <meta name="description" content="Index of articles on supporting Zaima Chant in Web Browsers." />
 <script type="text/javascript">
 var f = { }
 
@@ -50,6 +50,10 @@ f.additionalLinks = ''
   <li class="w3">
     <p class="link"><a href="WhatIsZaima.html">What is Zaima?</a></p>
     <p class="desc">What is Zaima and Zaima chant notation?</p>
+  </li>
+  <li class="w3">
+    <p class="link"><a href="ZaimaModel.html">Applying the Ruby Model to Zaima</a></p>
+    <p class="desc">A model for Zaima that builds upon W3C standards for Ruby annotation..</p>
   </li>
   <li class="w3">
     <p class="link"><a href="ZaimaUseCases.html">Zaima Use Cases</a></p>
