tweak to model text.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -222,24 +222,27 @@ documents (<a href="ZaimaUseCases-Chrome60.html">apply <code>bottom</code> to no
   <li>zaima (markup) ...</li>
   <li>zb (markup) ...</li>
   <li>zt (markup) ...</li>
+  <li>silt (attribute) ...</li>
   <li>medgam (attribute) ...</li>
   <li>beit (attribute) ...</li>
   <li>sereyu (markup) ...</li>
   <li>haleita (markup) ...</li>
 </ul>
-</em></p>
+</em>
+</p>
+<p>DOM child position indicates row level:</p>
 <p>
   <script type="text/plain">
     <zaimaGroup medgam="፬" beit="ፌ">
-      <zaima row="3" rubricized="true">
+      <zaima silt="ezil" rubricized="true">
         <zb>አጽ</rb><zt></zt>
         <zb>ነ</rb><zt>᎒</zt>
         <zb>ነ</rb><zt>᎐</zt>
       </zaima>
-      <zaima row="2">
+      <zaima silt="araray">
         አ<zb>ጽነነ</zb><zt>ባሕራ</zt>
       </zaima>
-      <zaima row="1">
+      <zaima silt="geez">
         <zb>አ</zb><zt>ቡበ</zt>
         <zb>ጽነ</zb><zt style="text-align: right;"><span class="diret_difat"></span><span class="diret_difat"></span></zt>
         <zb>ነ</zb><rt>᎓</zt>
