Added comment to text sample.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -234,7 +234,7 @@ documents (<a href="ZaimaUseCases-Chrome60.html">apply <code>bottom</code> to no
 <p>
   <script type="text/plain">
     <zaimaGroup medgam="፬" beit="ፌ">
-      <zaima silt="ezil" rubricized="true">
+      <zaima silt="ezil" rubricized="true"> // a rule should state rubricized="true" is the default for ezil, but allows setting to "false"
         <zb>አጽ</rb><zt></zt>
         <zb>ነ</rb><zt>᎒</zt>
         <zb>ነ</rb><zt>᎐</zt>
