--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -232,7 +232,7 @@ documents (<a href="ZaimaUseCases-Chrome60.html">apply <code>bottom</code> prope
 </ul>
 </em>
 </p>
-<p>DOM child position indicates row level:</p>
+<p>DOM child index indicates row level:</p>
 <p>
   <script type="text/plain">
     <zaimaGroup medgam="፬" beit="ፌ">
