Two images added and image link added.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -80,7 +80,7 @@ The following focuses on exploiting Ruby markup, and CSS facilities, to meet the
 <p>Ruby and Zaima both share a requirement for the layout of half-scale interlinear text bound to one ore more letters in a line of base text.
 A distinctive feature of Zaima notation that immediately distinguishes it from Ruby annotation is the regular occurrence of multiple interlinear
 lines, or &ldquo;rows&rdquo;, of text. No upper limit is set on the number of rows a line of base Zaima may have, eight rows however have
-been observed in corpus (<cite>አቋቋም፡ዘወርኃ፡በዓላት። Page 113</cite>).</p>
+been observed in corpus (<cite>አቋቋም፡ዘወርኃ፡በዓላት። <a href="images/quaquamZewerhaBealat-Page113.jpg">Page 113</a></cite>).</p>
 
 <div class="figWrap">
   <figure>
